# tree-sitter-rttm

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  Package.swift  README.md  RTTM_GUIDE.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-rttm.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRttm/: rttm.h
bindings/swift/TreeSitterRttmTests/: TreeSitterRttmTests.swift
examples/: basic.rttm  long.rttm  small.rttm
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments_and_spacing.txt  edge_cases.txt  invalid_numbers.txt  mixed_entries.txt  standard.txt
