[package]
name = "tree-sitter-rttm"
description = "A Tree-sitter grammar for RTTM files"
version = "0.1.0"
authors = ["Maksim Panfilov <maks@panf.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rttm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mxpanf/tree-sitter-rttm"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
